--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Default ignored files
 /shelf/
-/vcs.xml/
-../.idea
-../out
+/.idea/vcs.xml/
+.idea/
+out/
 /workspace.xml
 # Datasource local storage ignored files
 /dataSources/
